# Distribuidos

./: CMakeLists.txt  Client.cpp  Client.hpp  ClientInfo.cpp  ClientInfo.hpp  ReciveFiles.cpp  ReciveFiles.hpp  SendFiles.cpp  SendFiles.hpp  Server.cpp  Server.hpp  main.cpp
